manifests/bar.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: bar
  name: bar
spec:
  containers:
  - image: kriive/request-bin:latest
    name: pod
---
apiVersion: v1
kind: Service
metadata:
  name: bar-svc
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: "bar"
